# first-system

./: .env  .gitignore  Database schemas.md  README.md  assign_and_issue_orders.py  docker-compose.yml  launch.sh
backend/app/: app_logger.py  backend_pre_start.py  logging.py  main.py  periodic_task_wrapper.py  pyproject.toml  tasks.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 83e01d615a22_autogenerated_migration.py  91e9e4e85298_autogenerated_migration.py  b4a01fc6ba38_.py  c035d594e39f_autogenerated_migration.py
backend/app/api/: main.py  object.py  routers.py
backend/app/api/routes/: assign_order.py  cancel_order.py
backend/app/app/api/: assign_order_service.py  routers.py
backend/app/app/crud/: base.py
backend/app/app/database/: base.py  database_adapter.py  dependencies.py  session.py
backend/app/app/models/: models.py  object.py
backend/app/core/: assign_order.py  cancel_order.py  cancel_order_service.py  complete_order.py  config.py  tasks.py
backend/app/core/assign_order_service/: assign_order_service.py  data_provider.py  payment_calculator.py  route_information_provider.py
backend/app/crud/: object.py  order.py
backend/app/database/: base_class.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 3f9d537accda_create_example_db.py
backend/app/models/: base_class.py  order.py
backend/app/schemas/: object.py  order.py  requests_config.py
backend/app/storage/: example.db
backend/app/tests/: conftest.py  test_basic.py
backend/app/tests/api/: test_assign_order.py  test_health_check.py  utills.py
(+79 files in other folders)
