[tool.poetry]
name = "backend-template"
version = "0.1.0"
description = "Async fastapi+sqlalchemy(currently with sqlite) template for backend"
authors = ["Blinov Ilya"]
license = "CC"
readme = "README.md"
packages = [{include = "backend_template"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
pydantic = "^1.10.4"
SQLAlchemy = "^2.0.1"
asyncio = "^3.4.3"
aiosqlite = "^0.18.0"
httpx = "^0.23.3"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
